@@ -88,44 +88,6 @@ This can also be done for existing IP instances:
 127.0.0.0/8
 
 
-Option check_addr_prefixlen
-===========================
-
-By default, IPy rejects uncommon netmasks like 172.30.1.0/22:
-
-    >>> import IPy
-    >>> IPy.check_addr_prefixlen = True    # default value
-    >>> ips = IP('172.30.1.0/22')
-    Traceback (most recent call last):
-      ...
-    ValueError: IP('172.30.1.0/22') has invalid prefix length (22)
-
-You can change this behaviour with global option check_addr_prefixlen:
-
-    >>> IPy.check_addr_prefixlen = False   # disable
-    >>> ips = IP('172.30.1.0/22')
-    >>> len(ips)
-    1024
-
-
-The behaviour change with global check_addr_prefixlen option:
-
-    >>> import IPy
-    >>> IPy.check_addr_prefixlen = True
-    >>> IP('0.0.0.0-0.0.0.4')
-    Traceback (most recent call last):
-    ...
-    ValueError: the range 0.0.0.0-0.0.0.4 is not on a network boundary.
-    >>> IPy.check_addr_prefixlen
-    True
-
-    >>> IPy.check_addr_prefixlen = False
-    >>> IP('0.0.0.0-0.0.0.4')
-    IP('0.0.0.0/29')
-    >>> IPy.check_addr_prefixlen
-    False
-
-
 Convert address to string
 =========================
 
